kubernetes/hello/yml/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        application: hello
    spec:
      containers:
        - name: hello
          image: hellosite:local
          ports:
            - containerPort: 80
