kubernetes/hello/yml/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    application: hello
spec:
  selector:
    application: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
